# autoscan

./: .gitignore  MANIFEST.in  README.md  example_usage.py  main.py  output.md  pyproject.toml  requirements.txt  test_content_refinement_demo.py
autoscan/: __init__.py  autoscan.py  cli.py  common.py  config.py  errors.py  image_processing.py  model.py  prompts.py  types.py
autoscan/llm_processors/: base_llm_processor.py  content_refiner.py  img_to_md_processor.py  markdown_consolidator.py
autoscan/utils/: env.py  llm.py
examples/: attention.md  helloworld.md  helloworld2.md  independence.md  table.md
tests/: test_autoscan.py  test_cli.py  test_common.py  test_content_refiner.py  test_img_to_md_processor.py  test_markdown_consolidator.py
tests/integration/: test_examples_integration.py
