[tool.poetry]
name = "autoscan"
version = "0.1.0"
description = "High quality document (PDF, Doc, etc.) to text conversion"
authors = ["Umer Mansoor <umermk3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pdf2image = "^1.17.0"
litellm = "==1.67.1"
openai = "^1.57.0"
aiofiles = "^24.1.0"
tiktoken = "==0.9.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
aioresponses = "^0.7.7"
pytest-asyncio = "^0.25.0"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"